tests/expectations/parser-statement/statement/expression_fail.out
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', ')', '[', ',', 'true', 'false', 'async', 'block', 'network', 'self' -- found ']'
    --> test_0:1:2
     |
   1 | (];
     |  ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', ']', ',', 'true', 'false', 'async', 'block', 'network', 'self' -- found ')'
    --> test_1:1:2
     |
   1 | [);
     |  ^
Error [EPAR0370050]: Could not lex the following content: `\`.

    --> test_2:1:2
     |
   1 | x\y;
     |  ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found ';'
    --> test_3:1:6
     |
   1 | (x,y|;
     |      ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found '}'
    --> test_4:1:3
     |
   1 | x[};
     |   ^
Error [EPAR0370005]: expected ')', ',' -- found ']'
    --> test_5:1:6
     |
   1 | (x, y];
     |      ^
